[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/torus.dae" type="PackedScene" id=1]
[ext_resource path="res://src/Loop.gd" type="Script" id=2]

[sub_resource type="CylinderShape" id=1]

[sub_resource type="Animation" id=2]
resource_name = "spin"
length = 3.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Torus001:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 90, 0, 0 ), Vector3( 90, 360, 0 ) ]
}

[sub_resource type="QuadMesh" id=3]
size = Vector2( 0.25, 0.25 )

[node name="Loop" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 6.51683e-07, 0, 1, 0, -6.51683e-07, 0, 1, 0, 0, 0 )
script = ExtResource( 2 )

[node name="Torus001" parent="." index="0"]
transform = Transform( 0.5, 0, 0, 0, -2.18557e-08, -0.5, 0, 0.5, -2.18557e-08, 0, 0, 0 )

[node name="Area" type="Area" parent="Torus001" index="0"]
transform = Transform( 2, -3.55271e-15, -5.96046e-08, 5.96046e-08, -8.74228e-08, 2, -3.55271e-15, -2, -8.74228e-08, 0, 0, 0 )
collision_layer = 4
collision_mask = 2

[node name="CollisionShape" type="CollisionShape" parent="Torus001/Area" index="0"]
transform = Transform( 0.4, 0, 0, 0, -8.74228e-09, -0.4, 0, 0.2, -1.74846e-08, 0, 0, 0 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="1"]
autoplay = "spin"
anims/spin = SubResource( 2 )

[node name="CrunchParticles" type="CPUParticles" parent="." index="2"]
emitting = false
amount = 4
one_shot = true
explosiveness = 0.5
mesh = SubResource( 3 )
flag_disable_z = true
direction = Vector3( 0, 1, 0 )
initial_velocity = 4.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
orbit_velocity_curve = null
[connection signal="body_entered" from="Torus001/Area" to="." method="_on_Area_body_entered"]
